# ache-sucatas-v13

./: .ache_sucatas_checkpoint_v12.json  .env.example  .gitignore  ADAPTACAO_FILTRO_TEMPORALIDADE.sql  AUDITORIA TÉCNICA E GERAÇÃO DE RELATÓRIO DE STATUS.txt  AUDITORIA_CRAUDIO_2026_01_19.md  BROWSER_AUDIT_REQUEST.md  CHANGELOG_MINER_V13_AUDITOR_V16.md  CLAUDE.md  CLAUDE_FULL.md  CLAUDE_FULL_3.md  CLAUDE_FULL_6.md  COMPLETE AUTOPSY — CAPABILITY & INCAPABILITY DISCLOSURE.txt  CORRECAO_DADOS_2026-01-20.md  CORRECAO_DADOS_EXISTENTES.sql  CORRECAO_DEFINITIVA_CONSENSO.sql  CORRECAO_DEFINITIVA_VIEW.sql  CORRECOES_EMERGENCIAIS_V12.md  CORRIGIR_VIEW.sql  DIAGNOSTICO.sql  DIAGNOSTICO_COMPLETO.sql  EXECUTAR_NO_SUPABASE.sql  FIX_PAGINACAO_PUBLIC.sql  FORENSIC COMPLIANCE PROMPT.txt  FREIO_SEGURANCA_CUSTOS.md  Forensic Execution Guarantee.txt  GUIA_SEGURANCA_MAXIMA.md  IMPLEMENTATION - GEOSPATIAL LAYER.txt  INSTRUCOES_SCHEMA_SUPABASE.md  INTEGRACAO_API_COMPLETA.md  PROMPT ÚNICO CRAUDIO.txt  PROMPT_DEV_CHROME_AUDITORIA_2026_01_19.md  PROPOSTA_INTEGRACAO_SUPABASE_GITHUB.md  PROTECOES_IMPLEMENTADAS.md  README_THONY.md  RELATORIO_AUTOPSIA_COMPLETA.md  RELATORIO_FINAL_V12_SUCESSO_TOTAL.md  RELATORIO_FORENSE_2026_01_20.md  RELATORIO_SEGUNDA_AUTOPSIA.md  RELATÓRIO TÉCNICO DE ANÁLISE DE SEGURANÇA DE CÓDIGO.txt  (+77 more)
.githooks/: pre-commit
.github/: dependabot.yml
.streamlit/: config.toml  secrets.toml.example
config/: .env.example  bandit.yaml  ruff.toml
contracts/: dataset_contract_v1.md  examples.md
discovery_leiloes_gov/: .gitignore  README.md  REPORT.md
docs/: CHANGELOG_AUDITOR_V17.md  (+18 more)
(+247 files in other folders)
